--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.box {
+  padding: 0.7rem;
+  margin: 0.7rem;
+  width: 300px;
+  border: 1px solid black;
+  border-radius: 20px;
+}
+
+.content-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.my-btn {
+  padding: 0.7rem;
+  border: none;
+  border-radius: 20px;
+  background-color: aqua;
+  margin: 0.7rem;
+  font-size: 18px;
+  font-weight: 900;
+  cursor: pointer;
 }
